--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>FrontEnd Diary</title>
+</head>
+<body>
+	<div class="container">
+		<form action="https://formspree.io/alex@fe-diary.ru" class="form form-horizontal" method="POST">
+			<div class="form-group">
+				<label for="" class="control-label col-sm-2">Ваше имя:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" value="" placeholder="Иванов Иван">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="" class="control-label col-sm-2">Ваш e-mail:</label>
+				<div class="col-sm-10">
+					<input type="email" name="_replyto" placeholder="test@mail.ru">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="service" class="control-label col-sm-2">Услуга:</label>
+				<div class="col-sm-10">
+					<select name="service" id="service">
+						<option value="0" selected disabled>Выберите услугу</option>
+						<option value="Разработка/Доработка сайта">Разработка/Доработка сайта</option>
+						<option value="SEO/Контекстная реклама">SEO/Контекстная реклама</option>
+						<option value="Дизайн">Дизайн</option>
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="" class="control-label col-sm-2">Ваше сообщение:</label>
+				<div class="col-sm-10">
+					<textarea type="text" class="form-control" placeholder="Cообщение"></textarea>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button class="btn btn-default">Отправить запрос</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</body>
+</html>
