--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="form-group">
 				<label for="" class="control-label col-sm-2">Ваше имя:</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" value="" placeholder="Иванов Иван">
+					<input type="text" name="name" class="form-control" value="" placeholder="Иванов Иван">
 				</div>
 			</div>
 			<div class="form-group">
@@ -33,7 +33,7 @@
 			<div class="form-group">
 				<label for="" class="control-label col-sm-2">Ваше сообщение:</label>
 				<div class="col-sm-10">
-					<textarea type="text" class="form-control" placeholder="Cообщение"></textarea>
+					<textarea type="text" name="message" class="form-control" placeholder="Cообщение"></textarea>
 				</div>
 			</div>
 			<div class="form-group">
@@ -43,5 +43,6 @@
 			</div>
 		</form>
 	</div>
+	<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter38732795 = new Ya.Metrika({ id:38732795, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/38732795" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 </body>
 </html>
