--- a/index.html
+++ b/index.html
@@ -2,47 +2,62 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FrontEnd Diary</title>
-</head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>Troika Journal</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+	<link rel="apple-touch-startup-image" sizes="152x152" href="apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="manifest.json">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Troika Journal">
+	<meta name="apple-mobile-web-app-status-bar-style" content="grey">
+	<meta name="msapplication-starturl" content="/">
+	<meta name="msapplication-TileColor" content="#333">
+	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+	<meta name="theme-color" content="#333">
+<link href="styles.43bd97ea61b7f9b36049.css" rel="stylesheet"></head>
 <body>
-	<div class="container">
-		<form action="https://formspree.io/alex@fe-diary.ru" class="form form-horizontal" method="POST">
-			<div class="form-group">
-				<label for="" class="control-label col-sm-2">Ваше имя:</label>
-				<div class="col-sm-10">
-					<input type="text" name="name" class="form-control" value="" placeholder="Иванов Иван">
+	<div id="app">
+		<div class="wrapper">
+			<div class="main">
+				<header class="header">
+					<menu class="menu">
+						<a href="/gtc-test/journal" class="menu__item menu__item--logo">Журнал</a>
+					</menu>
+				</header>
+				<div class="view">
+					<div class="container">
+						<div class="journals">
+							<div class="journal__link">
+								<div class="journal__thumbnail journal__thumbnail--stub"></div>
+								<div class="journal__date journal__date--stub"></div>
+							</div>
+							<div class="journal__link">
+								<div class="journal__thumbnail journal__thumbnail--stub"></div>
+								<div class="journal__date journal__date--stub"></div>
+							</div>
+							<div class="journal__link">
+								<div class="journal__thumbnail journal__thumbnail--stub"></div>
+								<div class="journal__date journal__date--stub"></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="form-group">
-				<label for="" class="control-label col-sm-2">Ваш e-mail:</label>
-				<div class="col-sm-10">
-					<input type="email" name="_replyto" placeholder="test@mail.ru">
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="service" class="control-label col-sm-2">Услуга:</label>
-				<div class="col-sm-10">
-					<select name="service" id="service">
-						<option value="0" selected disabled>Выберите услугу</option>
-						<option value="Разработка/Доработка сайта">Разработка/Доработка сайта</option>
-						<option value="SEO/Контекстная реклама">SEO/Контекстная реклама</option>
-						<option value="Дизайн">Дизайн</option>
-					</select>
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="" class="control-label col-sm-2">Ваше сообщение:</label>
-				<div class="col-sm-10">
-					<textarea type="text" name="message" class="form-control" placeholder="Cообщение"></textarea>
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<button class="btn btn-default">Отправить запрос</button>
-				</div>
-			</div>
-		</form>
+		</div>
 	</div>
-	<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter38732795 = new Ya.Metrika({ id:38732795, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/38732795" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
-</body>
+	<script type="text/javascript" src="register-service-worker.js"></script>
+<script type="text/javascript" src="vendor.43bd97ea61b7f9b36049.js"></script><script type="text/javascript" src="app.43bd97ea61b7f9b36049.js"></script></body>
 </html>
