--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Troika Journal</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-	<link rel="apple-touch-startup-image" sizes="152x152" href="apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Troika Journal">
-	<meta name="apple-mobile-web-app-status-bar-style" content="grey">
+	<meta name="apple-mobile-web-app-status-bar-style" content="orange">
+	<link rel="apple-touch-startup-image" href="/apple-icon-152x152.png">
 	<meta name="msapplication-starturl" content="/">
 	<meta name="msapplication-TileColor" content="#333">
-	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#333">
-<link href="styles.43bd97ea61b7f9b36049.css" rel="stylesheet"></head>
+<link href="/styles.5573f5e42eb411eeaca1.css" rel="stylesheet"></head>
 <body>
 	<div id="app">
 		<div class="wrapper">
 			<div class="main">
 				<header class="header">
 					<menu class="menu">
-						<a href="/gtc-test/journal" class="menu__item menu__item--logo">Журнал</a>
+						<a href="/" class="menu__item menu__item--logo">Troika Journal</a>
 					</menu>
 				</header>
 				<div class="view">
@@ -58,6 +58,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="register-service-worker.js"></script>
-<script type="text/javascript" src="vendor.43bd97ea61b7f9b36049.js"></script><script type="text/javascript" src="app.43bd97ea61b7f9b36049.js"></script></body>
+	<script type="text/javascript" src="/register-service-worker.js"></script>
+<script type="text/javascript" src="/vendor.5573f5e42eb411eeaca1.js"></script><script type="text/javascript" src="/app.5573f5e42eb411eeaca1.js"></script></body>
 </html>
